# worlde

./: .~lock.alphabetized-table.docx#  .~lock.data.docx#  NOTEEE  README.md  adjs.csv  alphabetized-table.docx  data.csv  data.docx  main.py  nouns.csv  numbered.csv  pyproject.toml  results.csv  results_with_ids.csv  task.txt  verbs.csv  word.py
app/: div.py  docx_writer.py  main.py  pos_counter.py  processor.py  reader.py  to-csv.py  tokenizer.py  writer.py
