[project]
name = "worlde"
version = "0.1.0"
description = "App that counts words"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "spacy>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
worlde = "app.main:app"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "types-openpyxl>=3.1.5.20250919",
]
