[project]
name = "worlde"
version = "0.1.0"
description = "App that counts words"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "spacy>=3.7.0",
    "python-docx>=1.1.0",
    "result>=0.17.0",
    "pip>=25.2",
]

[project.optional-dependencies]
models-sm = ["en-core-web-sm"]
models-trf = ["en-core-web-trf"]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "types-openpyxl>=3.1.5.20250919",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }
